# vulkan-molecules

./: .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE  README.md  boxticle.cabal  cabal.project
app/: Has.hs  Main.hs  Mutables.hs  Options.hs  Pipeline.hs  Shaders.hs  Swapchain.hs  TH.hs  Types.hs  Utils.hs  macros.h
app/Graphics/: Initialize.hs  Mutables.hs  Types.hs  Utils.hs
app/Graphics/Internal/: Types.hs
app/Internal/: Types.hs
app/VulkanConfig/: FIRUtils.hs  Pipeline.hs  Shaders.hs
app/VulkanConfig/Shaders/: ADiff.hs  Equations.hs
app/VulkanSetup/: ComputeMutables.hs  Error.hs  GraphicsMutables.hs  Initialize.hs  Shaders.hs  Types.hs  Utils.hs
app/VulkanSetup/Internal/: Types.hs
app/VulkanSetup/Types/: Unsafe.hs
blogpost/: 0-motivation.lhs
math/: ReaxFF.ipynb
shaders/: shader.frag  shader.vert  shader.vertex  updAcc.comp  updAcc.compute  updPos.comp  updPos.compute
shaders-src/: boxticle.vert
