cabal-version:      2.4
name:               boxticle
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            MIT
author:             Jakob Bruenker
maintainer:         jakob.bruenker@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable boxticle
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Graphics.Mutables
                      Graphics.Initialize
                      Graphics.Types
                      Graphics.Internal.Types
                      Graphics.Utils
                      VulkanConfig.Shaders
                      VulkanConfig.Pipeline
                      Utils
                      Options

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base >=4.14.2.0 && < 5
                      , template-haskell
                      , transformers
                      , vulkan ^>=3.14.2
                      , optparse-applicative ^>=0.16.1
                      , GLFW-b ^>=3.3.0.0
                      , rio ^>=0.1.20
                      , lens ^>=5.0.1
                      , extra ^>=1.7.9
                      , vector-sized ^>= 1.4.0
                      , finite-typelits ^>= 0.1.4.2
                      , fir ^>= 0.0.1.0
                      , resourcet ^>= 1.2.4.3
                      , storable-tuple ^>= 0.0.3
    hs-source-dirs:     app
    default-language:   Haskell2010
    ghc-options:        -Wall
                        -Wno-unticked-promoted-constructors
                        -Wcompat
                        -Widentities
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
    default-extensions: BangPatterns,
                        BinaryLiterals,
                        BlockArguments,
                        ConstraintKinds,
                        DataKinds,
                        DefaultSignatures,
                        DeriveDataTypeable,
                        DeriveFoldable,
                        DeriveFunctor,
                        DeriveGeneric,
                        DeriveTraversable,
                        DerivingVia,
                        DoAndIfThenElse,
                        DuplicateRecordFields,
                        EmptyDataDecls,
                        ExistentialQuantification,
                        FlexibleContexts,
                        FlexibleInstances,
                        FunctionalDependencies,
                        GADTs,
                        InstanceSigs,
                        ImplicitParams,
                        ImportQualifiedPost,
                        KindSignatures,
                        LambdaCase,
                        LexicalNegation,
                        MultiParamTypeClasses,
                        MultiWayIf,
                        NamedFieldPuns,
                        NoStarIsType,
                        NoImplicitPrelude,
                        OverloadedLabels,
                        OverloadedStrings,
                        PartialTypeSignatures,
                        PatternGuards,
                        PatternSynonyms,
                        PolyKinds,
                        RankNTypes,
                        RecordWildCards,
                        ScopedTypeVariables,
                        StandaloneDeriving,
                        StandaloneKindSignatures,
                        StrictData,
                        TupleSections,
                        TypeApplications,
                        TypeFamilyDependencies,
                        TypeOperators,
                        TypeSynonymInstances,
                        ViewPatterns
